Fixed some img stretching due to responsive

--- a/bin/styles/index.css
+++ b/bin/styles/index.css
@@ -56,9 +56,8 @@ body {
 
     font-size: 60px;
     font-weight: 900;
-    padding-bottom: 35px;
-
-    transition: font-size 0.5s ease-in-out;
+    margin-bottom: 35px;
+    transition: font-size 0.5s ease-in-out, margin-bottom 0.5s ease-in-out;
 }
 
 .btn_empezar {
@@ -81,8 +80,9 @@ body {
 
 .headerLeft {
     margin-left: 30px;
-    width: 20px;
-    transition: width 0.5s ease-in-out;
+    width: 17px;
+    transition: width 0.5s ease-in-out, margin-left 0.5s ease-in-out;
+
 
 
 }
@@ -161,8 +161,9 @@ body {
     .bienvenidos {
 
         font-size: 30px;
-        transition: font-size 0.5s ease-in-out;
-
+        
+        margin-bottom: 0px;
+        transition: font-size 0.5s ease-in-out, margin-bottom 0.5s ease-in-out;
     }
 
     .btn_empezar {
@@ -179,8 +180,8 @@ body {
     .headerLeft {
 
         margin-left: 15px;
-        width: 19px;
-        transition: width 0.5s ease-in-out;
+        width: 15px;
+        transition: width 0.5s ease-in-out, margin-left 0.5s ease-in-out;
 
     }
 
@@ -204,6 +205,7 @@ body {
     .bienvenidos {
 
         padding-bottom: 15px;
+        transition: font-size 0.5s ease-in-out, padding-bottom 0.5s ease-in-out;
 
     }
 
@@ -232,8 +234,8 @@ body {
     .bienvenidos {
 
         font-size: 30px;
-        transition: font-size 0.5s ease-in-out;
-
+        margin-bottom: -10px;
+        transition: font-size 0.5s ease-in-out, margin-bottom 0.5s ease-in-out;
     }
 
     .btn_empezar {
@@ -263,7 +265,8 @@ body {
 
     .footerLeft {
         width: 200px;
-        transition: width 0.5s ease-in-out;
+        transition: width 0.5s ease-in-out, margin-left 0.5s ease-in-out;
+
     }
 
     .footerRight {
@@ -300,7 +303,6 @@ body {
     .bienvenidos {
 
         font-size: 20px;
-        transition: font-size 0.5s ease-in-out;
 
     }
 
